test/Harper/Tests/Good/issue028_tupleMatch.har
gcd :: Integer -> Integer -> Integer;
gcd a b = match (a, b) {
  (_, 0) => a,
  _      => gcd b | a mod b
};

main :: Integer;
main = gcd 65482732497 4738130263965527;

