test/Harper/Tests/Bad/issue003_invEqTypes.har
f :: Integer -> Unit -> Integer;
f a b = {
  if a == b {
    return 42;
  }
  return 0;
};

main :: Integer;
main = f 17 ();